--- a/static/css/map.css
+++ b/static/css/map.css
@@ -30,3 +30,28 @@ html, body {
 .navbar-brand{
   color: white;
 }
+
+
+
+.navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: rgba(60, 18, 18, 0.68);
+    background-image: none;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 4px;
+}
+
+
+.icon-bar {
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+    color: white;
+    background-color: white;
+}
